--- a/config.ini
+++ b/config.ini
@@ -70,7 +70,7 @@ font-2 = Font Awesome 6 Free:style=Regular:pixelsize=10;1
 font-3 = Font Awesome 6 Free:style=Solid:pixelsize=10;1
 font-4 = Font Awesome 5 Free:style=Regular:pixelsize=10;1
 
-modules-left = rofi
+modules-left = rofi mail htop
 modules-center = xwindow
 modules-right = filesystem xbacklight memory cpu wlan eth temperature date pulseaudio 
 tray-position = right
@@ -91,11 +91,21 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[module/htop]
+type = custom/text
+content = " "
+click-left = xterm -e htop
+
+[module/mail]
+type = custom/text
+content = " "
+click-left = thunderbird
+
 [module/rofi]
 type = custom/text
 content = "📁"
 click-left = rofi -show run
-click-right = exec thunar $HOME &
+click-right = exec dolphin $HOME &
 
 [module/xwindow]
 type = internal/xwindow
@@ -120,9 +130,8 @@ label-indicator-underline = ${colors.secondary}
 [module/filesystem]
 type = internal/fs
 interval = 25
-
 mount-0 = /
-format-prefix = "🖴 "
+format-prefix = " "
 label-mounted = %{F#0a81f5}%mountpoint%%{F-}: %percentage_used%%
 label-unmounted = %mountpoint% not mounted
 label-unmounted-foreground = ${colors.foreground-alt}
@@ -233,7 +242,7 @@ label = %percentage:2%%
 [module/memory]
 type = internal/memory
 interval = 2
-format-prefix = ""
+format-prefix = " "
 format-underline = #4bffdc
 label = %percentage_used%%
 
@@ -278,29 +287,22 @@ format-disconnected =
 [module/date]
 type = internal/date
 interval = 5
-
 date =
 date-alt = " %Y-%m-%d"
-
 time = %H:%M
 time-alt = %H:%M:%S
-
 format-prefix = " "
-format-prefix-foreground = ${colors.foreground-alt}
+;format-prefix-foreground = ${colors.foreground-alt}
 format-underline = #0a6cf5
-
 label = %date% %time%
 
 [module/pulseaudio]
 type = internal/pulseaudio
-
 format-volume = <label-volume> <bar-volume>
-label-volume = VOL %percentage%%
+label-volume =  %percentage%%
 label-volume-foreground = ${root.foreground}
-
-label-muted = 🔇 muted
+label-muted = 
 label-muted-foreground = #666
-
 bar-volume-width = 10
 bar-volume-foreground-0 = #55aa55
 bar-volume-foreground-1 = #55aa55
