--- a/config.ini
+++ b/config.ini
@@ -83,7 +83,7 @@ click-left = thunderbird
 [module/rofi]
 type = custom/text
 content = "📁"
-click-left = rofi -show run
+click-left = rofi -i -show drun -modi drun -show-icons
 click-right = exec dolphin $HOME &
 
 [module/xwindow]
