--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@
 ;background = ${xrdb:color0:#222}
 ;background = #80000000
 background = #593d3d3d
-background-alt = #33068088a
+;background-alt = #33068088a
 ;foreground = ${xrdb:color7:#222}
 foreground = #dfdfdf
 foreground-alt = #555
@@ -49,9 +49,9 @@ font-2 = Font Awesome 6 Free:style=Regular:pixelsize=10;1
 font-3 = Font Awesome 6 Free:style=Solid:pixelsize=10;1
 font-4 = Font Awesome 5 Free:style=Regular:pixelsize=10;1
 
-modules-left = rofi mail htop
+modules-left = rofi mail htop telegram runelite i3
 modules-center = xwindow
-modules-right = filesystem memory cpu temperature date pulseaudio 
+modules-right = mybattery filesystem memory cpu temperature date pulseaudio 
 tray-position = right
 tray-padding = 2
 ;tray-background = #0063ff
@@ -70,10 +70,25 @@ tray-padding = 2
 cursor-click = pointer
 cursor-scroll = ns-resize
 
+[module/mybattery]
+type = custom/script
+exec = ~/Dokumente/python/battery_native.sh
+tail = true
+
 [module/htop]
 type = custom/text
 content = " "
 click-left = xterm -e htop
+
+[module/runelite]
+type = custom/text
+content = "R  "
+click-left = snap run runelite
+
+[module/telegram]
+type = custom/text
+content = " "
+click-left = telegram-desktop
 
 [module/mail]
 type = custom/text
