--- a/config.ini
+++ b/config.ini
@@ -72,7 +72,7 @@ cursor-scroll = ns-resize
 
 [module/mybattery]
 type = custom/script
-exec = ~/Dokumente/python/battery_native.sh
+exec = ~/Dokumente/python/battery_native2.sh
 tail = true
 
 [module/htop]
@@ -99,7 +99,7 @@ click-left = thunderbird
 type = custom/text
 content = "📁"
 click-left = rofi -i -show drun -modi drun -show-icons
-click-right = exec dolphin $HOME &
+click-right = exec thunar $HOME &
 
 [module/xwindow]
 type = internal/xwindow
@@ -219,7 +219,7 @@ bar-fill-foreground = #9f78e1
 bar-empty = ─
 bar-empty-font = 2
 bar-empty-foreground = ${colors.foreground-alt}
- 
+
 [module/backlight-acpi]
 inherit = module/xbacklight
 type = internal/backlight
